--- a/packages.config
+++ b/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="Microsoft.Maps.MapControl.WPF" version="1.0.0.3" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net472" />
+  <package id="System.Drawing.Common" version="5.0.2" targetFramework="net472" />
 </packages>
